# Parallel-Programming-2025

./: .gitattributes
hw1/: .clang-format  .gitignore  CMakeLists.txt  run_debug  run_release
hw1/assets/: Makefile.template  report.md
hw1/include/: a_star_solver.hpp  bfs_solver.hpp  bi_bfs_solver.hpp  game.hpp  solver.hpp
hw1/include/solver/: a_star.hpp  base.hpp  bfs.hpp  bi_bfs.hpp
hw1/include/solver/parallel/: a_star.hpp
hw1/scripts/: benchmark  configure  prepare_submission.py  run_benchmark  run_debug  run_release  srun_benchmark  srun_debug  srun_release
hw1/src/: a_star_solver.cpp  bfs_solver.cpp  bi_bfs_solver.cpp  game.cpp  main.cpp  solver.cpp
hw1/src/solver/: a_star.cpp  base.cpp  bfs.cpp  bi_bfs.cpp
hw1/src/solver/parallel/: a_star.cpp
hw2/: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  Makefile
hw2/assets/: .gitignore  Makefile.template  PARALLEL_SIFT_GUIDE.md  SIFT_ALGORITHM_SUMMARY.md  report.md
hw2/docs/: IMPLEMENTATION_STATUS.md  OPENMP_TRANSITION.md  PARALLEL_PROFILE.txt  PARALLEL_SIFT_GUIDE.md  PHASE2_DOG_IMPLEMENTATION.md  PHASE3_KEYPOINT_DETECTION.md  QUICK_REFERENCE.md  SEQUENTIAL_PROFILE.txt
hw2/include/: image.hpp  mpi_utils.hpp  profiler.hpp  sift.hpp
hw2/include/sequential/: image.hpp  sift.hpp
hw2/notebooks/: check_dog.ipynb  check_grad.ipynb  check_kps.ipynb  check_pyramid.ipynb
hw2/scripts/: build_validate  conda.sh  env.sh  prepare_submission.py  run_benchmark  run_debug  run_release  srun_benchmark  srun_debug  srun_release
hw2/src/: hw2.cpp  image.cpp  mpi_utils.cpp  profiler.cpp  sift.cpp  validate.cpp
hw2/src/sequential/: image.cpp  sift.cpp
hw3/: .gitignore  CMakeLists.txt
hw3/assets/: Makefile.template  report.md
hw3/include/: arithmetic.hpp  arithmic.hpp  common.h  common.hpp  io.hpp  png_writer.hpp  render.hpp  schedule.hpp  utils.hpp
hw3/scripts/: benchmark.py  build_cpu  env.sh  prepare_submission.py  run_benchmark  run_cpu  run_debug  run_release  run_testcase.py  submit.py
hw3/src/: global.cpp  hw3.cu  hw3_cpu.cpp  io.cpp  png_writer.cpp  png_writer_zlib.cpp  render.cu  schedule.cu  utils.cu
hw4/: .gitignore  CMakeLists.txt
hw4/assets/: Makefile.template  device.txt
hw4/include/: hash.h  schedule.h  sha256.h  utils.h
hw4/scripts/: benchmark.py  build  build_sample  env.sh  run  run_sample  run_testcase.py  submit.py
hw4/src/: hash.cu  main.cu  sha256.cu  utils.cu
hw4/src/sample/: main.cu  sha256.cu
hw5/: .gitignore  CMakeLists.txt
hw5/assets/: Makefile  accelerate.md  report.md
hw5/include/: kernel.hpp  utils.hpp
hw5/scripts/: benchmark.py  configure  run_testcase.py  submit.py
hw5/src/: kernel.cpp  main.cpp  utils.cpp
hw5/src/sample/: main.cc
